# altel-eudaq

./: .gitmodules  CMakeLists.txt
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/factory/: CMakeLists.txt
source/eudaq/: AltelProducer.cc  AltelRawEvent2LCEventConverter.cc  AltelRawEvent2StdEventConverter.cc  CMakeLists.txt
source/eudaq/exe/: CMakeLists.txt  ConverterEudaqAltel2Json.cc  ConverterEudaqJade2Json.cc  FEI4Helper.hh  UsbpixrefRawEventHelper.hh  oldEudaqRawDump.cxx
source/eudaq/legacy/: CMakeLists.txt  JadeDataFrame.cc  JadeDataFrame.hh  JadeRawEvent2LCEventConverter.cc  JadeRawEvent2StdEventConverter.cc
source/eudaq/legacy/include/: EudaqWriter.hh  JadeCore.hh  JadeDataFrame.hh  JadeManager.hh  JadeOption.hh  JadeReader.hh  JadeRegCtrl.hh  JadeSystem.hh  JadeUtils.hh  JadeWriter.hh
source/eudaq/legacy/src/: AltelReader.cc  AltelRegCtrl.cc  AltelWriter.cc  EudaqWriter_v4.cc  JadeDataFrame.cc  JadeManager.cc  JadeOption.cc  JadeProducer.cc  JadeRawEvent2StdEventConverter.cc  JadeReader.cc  JadeRegCtrl.cc  JadeUtils.cc  JadeWriter.cc
source/eudaq/misc/: aida_tlu_connection.xml  eudaq_altel_tlu.conf  eudaq_altel_tlu.ini  eudaq_altel_tlu.sh
source/eudaq/src/: AltelRawEvent2StdEventConverter.cc
source/exe/: CMakeLists.txt  dmarx_dump.cc  rbcp_main.cc  regctrl_main.cc  tcprx_dump.cc
source/lib/: CMakeLists.txt
source/lib/include/: AltelReader.hh  DataFrame.hh  Layer.hh  Telescope.hh
source/lib/misc/: altel_reg_cmd_list.json
source/lib/rbcp/: CMakeLists.txt  rbcp.cc
source/lib/src/: AltelReader.cc  FirmwarePortal.cc  Layer.cc  Telescope.cc
